fix breadcrumb urls and show past editions menu on mobile

--- a/themes/hugobricks/static/css/header-footer.css
+++ b/themes/hugobricks/static/css/header-footer.css
@@ -130,7 +130,7 @@ body:not(.transparent_header) header + section.bgimage .container {padding-top: 
 body:not(.transparent_header) header + section.bgimage .container h1:first-child {padding-top: 1.5rem;}
 header .languages {display: inline-block;}
 body.mobilemenu header .navnav {display: flex; flex-direction: column; justify-content: space-between;}
-body.mobilemenu header .navnav.languages {display: none;}
+/* body.mobilemenu header .navnav.languages {display: none;} */
 
 header.dark {background: var(--textDarker);}
 body.transparent_header header:not(.sticky) {background: transparent;}
@@ -205,7 +205,7 @@ footer.dark ul li a:not(.button)::after {background: rgba(255,255,255,0.5);}
     background: none;
     padding: 0;
 }
-#togglemenu span {display: block; width: 100%; height: 100%; background: transparent url(/img/menu.svg) center center / 2rem auto no-repeat;}
+#togglemenu span {display: block; width: 100%; height: 100%; background: transparent url(../img/menu.svg) center center / 2rem auto no-repeat;}
 body.mobilemenu #togglemenu {display: block;}
 body.mobilemenu header.sticky + #togglemenu {position: fixed; top: 0.75rem; margin-top: 0;}
 body.mobilemenu header .nav {display: grid; transition: grid-template-rows 0.3s ease-in-out;}
